# gba-hpp

./: CMakeLists.txt  meson.build
include/gba/: fieldtype.hpp  fixedtype.hpp  gba.hpp  inttype.hpp  ioregister.hpp  math.hpp  mattype.hpp  mmio.hpp  tupletype.hpp  type.hpp  vectype.hpp
include/gba/bios/: checksum.hpp  compress.hpp  cpuset.hpp  decompress.hpp  halt.hpp  math.hpp  misc.hpp  reset.hpp  sound.hpp  swi_call.hpp
include/gba/ext/: agbabi.hpp  log.hpp
include/gba/ext/agbabi/: agbabi.hpp  coroutine.hpp  fiber.hpp  irq.hpp  math.hpp  overclock.hpp  pull_coroutine.hpp  push_coroutine.hpp  string.hpp
include/gba/ext/agbabi/detail/: coro_context.hpp  pull_coroutine_context.hpp  push_coroutine_context.hpp  stack.hpp
include/gba/ext/log/: detail.hpp
include/gba/ext/mgba/: log.hpp
include/gba/hardware/: cartridge.hpp  dma.hpp  memcnt.hpp  serial.hpp  timer.hpp
include/gba/input/: key.hpp  keyhelper.hpp
include/gba/interrupt/: handler.hpp  irq.hpp
include/gba/log/: logger.hpp
include/gba/registers/: accessors.hpp  dma.hpp  dma_types.hpp  irq.hpp  irq_types.hpp  key.hpp  key_types.hpp  system.hpp  system_types.hpp  timer.hpp  timer_types.hpp  video.hpp  video_types.hpp
include/gba/sound/: noise.hpp  soundcnt.hpp  tone.hpp  wave.hpp
include/gba/type/: angle.hpp  fixed.hpp  fixedpoint.hpp  int.hpp  lut.hpp  memory.hpp  stack.hpp  tile.hpp  util.hpp  vector.hpp
include/gba/util/: array_traits.hpp  bit_container.hpp  byte_array.hpp  constexpr.hpp  diff_filter.hpp  huff_compress.hpp  lz77_compress.hpp  rle_compress.hpp  tiles.hpp  tuple_traits.hpp
include/gba/video/: bgxcnt.hpp  bld.hpp  dispcnt.hpp  dispstat.hpp  modes.hpp  mosaic.hpp  objattr.hpp  palettes.hpp  textscreen.hpp  win.hpp
samples/01 gba-hpp/: CMakeLists.txt  main.cpp
samples/02 coroutine/: CMakeLists.txt  main.cpp
samples/03 mgba/: main.cpp
samples/04 vblank_keyinput/: main.cpp
